--- a/Underground/Underground.entitlements
+++ b/Underground/Underground.entitlements
@@ -12,6 +12,10 @@
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.toys.lucid.Underground</string>
+	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
 </dict>
